--- a/docs/fundamentals/code-analysis/quality-rules/ca3002.md
+++ b/docs/fundamentals/code-analysis/quality-rules/ca3002.md
@@ -42,7 +42,7 @@ This rule attempts to find input from HTTP requests reaching raw HTML output.
 
 ## When to suppress warnings
 
-It's safe to suppress a warning from this rule i:
+It's safe to suppress a warning from this rule if:
 
 - You know that the input is validated against a known safe set of characters not containing HTML.
 - You know the data is HTML-encoded in a way not detected by this rule.
